docs: update OpenAPIs docs for hermes service.
